on SwitchOver just SLAVE as target check added

--- a/app/src/main/resources/template.html
+++ b/app/src/main/resources/template.html
@@ -5,7 +5,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <style>
-    .register{
+.register{
     background: -webkit-linear-gradient(left, #3931af, #00c6ff);
     margin-top: 3%;
     padding: 3%;
@@ -15,17 +15,10 @@
     color: #fff;
     margin-top: 4%;
 }
-.register-left input{
-    border: none;
-    border-radius: 1.5rem;
-    padding: 2%;
-    width: 60%;
-    background: #f8f9fa;
-    font-weight: bold;
-    color: #383d41;
-    margin-top: 30%;
-    margin-bottom: 3%;
-    cursor: pointer;
+.register-left p{
+    font-weight: lighter;
+    padding: 12%;
+    margin-top: -9%;
 }
 .register-right{
     background: #f8f9fa;
@@ -33,9 +26,9 @@
     border-bottom-left-radius: 10% 50%;
 }
 .register-left img{
-    margin-top: 15%;
+    margin-top: 45%;
     margin-bottom: 5%;
-    width: 80%;
+    width: 60%;
     -webkit-animation: mover 2s infinite  alternate;
     animation: mover 1s infinite  alternate;
 }
@@ -47,27 +40,12 @@
     0% { transform: translateY(0); }
     100% { transform: translateY(-20px); }
 }
-.register-left p{
-    font-weight: lighter;
-    padding: 12%;
-    margin-top: -9%;
-}
+
 .register .register-form{
     padding: 10%;
     margin-top: 10%;
 }
-.btnRegister{
-    float: right;
-    margin-top: 10%;
-    border: none;
-    border-radius: 1.5rem;
-    padding: 2%;
-    background: #0062cc;
-    color: #fff;
-    font-weight: 600;
-    width: 50%;
-    cursor: pointer;
-}
+
 .register .nav-tabs{
     margin-top: 3%;
     border: none;
@@ -100,8 +78,20 @@
     margin-bottom: -15%;
     color: #495057;
 }
+.btnRegister{
+    float: right;
+    margin-top: 10%;
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    background: #0062cc;
+    color: #fff;
+    font-weight: 600;
+    width: 50%;
+    cursor: pointer;
+}
 </style>
-<div class="container register">
+<div class="register">
     <div class="row">
         
         <div class="col-md-2 register-left">
