web interface style fix

--- a/app/src/main/resources/template.html
+++ b/app/src/main/resources/template.html
@@ -15,7 +15,7 @@
     <style>
         .register {
             background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-            /* margin-top: 3%; */
+            margin-top: 3%;
             padding: 3%;
         }
     
