--- a/app/src/main/resources/index.html
+++ b/app/src/main/resources/index.html
@@ -559,10 +559,9 @@
                     beforeSend: function (xhr) {
                         xhr.setRequestHeader('Authorization', 'Basic ' + btoa(unescape(encodeURIComponent(document.getElementById("axbu").innerText + ':' + document.getElementById("axbp").innerText))))
                     },
-                    success: async function (data) {
-                        await new Promise(r => setTimeout(r, 7000));
+                    success: function (data) {
                         document.getElementById("overlay").style.display = 'none';
-                        window.location.reload();                  
+                        document.getElementById('cb_refresh').checked = true;                  
                     },
                     error: function (error) {
                         console.log(`Error ${error}`);
@@ -713,9 +712,9 @@
                     beforeSend: function (xhr) {
                         xhr.setRequestHeader('Authorization', 'Basic ' + btoa(unescape(encodeURIComponent(document.getElementById("axbu").innerText + ':' + document.getElementById("axbp").innerText))))
                     },
-                    success: async function (data) {
-                        await new Promise(r => setTimeout(r, 7000));
+                    success: function (data) {
                         getRows(true);
+                        document.getElementById('cb_refresh').checked = true;
                         document.getElementById("overlay").style.display = 'none';
                         //window.location.reload();                    
                     },
